src/objects/Return_CR_Header__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Id__c</fullName>
        <label>Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time_Variance_JE__c</fullName>
        <label>Accounting Last Sync Time Variance JE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time__c</fullName>
        <label>Accounting Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Response_Variance_JE__c</fullName>
        <label>Accounting Response Variance JE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Response__c</fullName>
        <label>Accounting Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_For_QB_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For QB Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_QB_Variance_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For QB Variance JE Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Variance_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Variance JE Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backward_Conversion_Rate__c</fullName>
        <description>Backward Conversion Rate With Markup</description>
        <formula>if((ISNULL(FX_Conversion_Rate__c) || FX_Conversion_Rate__c = 0),1,1/FX_Conversion_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Backward Conversion Rate With Markup</inlineHelpText>
        <label>Backward Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Memo__c</fullName>
        <label>Credit Memo#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credited_Date__c</fullName>
        <label>Credited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FX_Conversion_Rate__c</fullName>
        <label>FX Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Tax_Amount__c</fullName>
        <label>Item Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Total__c</fullName>
        <label>Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Tax_Amount__c</fullName>
        <label>Other Charges Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Total__c</fullName>
        <label>Other Charges Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QB_Variance_JE_Accounting_Id__c</fullName>
        <label>QB Variance JE Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Credited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_Token_For_Variance_JE__c</fullName>
        <label>Sync Token For Variance JE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Token__c</fullName>
        <label>Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Total__c</fullName>
        <formula>Item_Tax_Amount__c +  Other_Charges_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_With_Tax__c</fullName>
        <formula>Item_Total__c +  Other_Charges_Total__c +  Tax_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Is_Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Return CR Headers</relationshipLabel>
        <relationshipName>Return_CR_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Variance_JE_Accounting_Id__c</fullName>
        <label>Xero Variance JE Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Return CR Header</label>
    <nameField>
        <displayFormat>RTNCR-{00000000}</displayFormat>
        <label>Return CR Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return CR Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>